syntax = "proto3";

package reward.v1;
option go_package = "reward/v1;rewardv1";


service RewardService {
  rpc PreReward(PreRewardRequest) returns (PreRewardResponse);
  rpc GetReward(GetRewardRequest) returns (GetRewardResponse);
}

message PreRewardRequest {
  string biz = 1;
  int64 biz_id = 2;
  string biz_name = 3;
  // 被打赏的人，收钱的人
  int64 tar_uid = 4;
  // 打赏的人，出钱的人
  int64 src_uid = 5;
  // 赏额
  int64 amt = 6;
}

message PreRewardResponse {
  // 打赏的 Id
  int64 rid = 1;
  // 这里有点不好，表示直接耦合了微信支付，返回二维码
  string code_url = 2;
}

message GetRewardRequest {
  int64 rid = 1;
  int64 uid = 2;
}

// 大多数场景只关心打赏结果
message GetRewardResponse {
  RewardStatus status = 1;
}

enum RewardStatus {
  RewardStatusUnknown = 0;
  RewardStatusInit = 1;
  RewardStatusPayed = 2;
  RewardStatusFailed = 3;
}

